@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.18 ===
+* Implemented automatic scale of spectrum graph switch.
 
 
 === 1.0.17 ===
